# korean-tranding

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: advice.py  dependencies.py  event.py  main.py  middleware.py
app/config/: __init__.py  exception.py  settings.py
app/database/: __init__.py  database.py
app/model/youtube/: response.py
app/routers/youtube/: __init__.py  youtube_business.py  youtube_end_point.py
app/schema/: __init__.py  public.py
app/service/business/: __init__.py  nlp.py  search.py  transaction.py  youtube.py
app/service/end_point/: __init__.py  youtube.py
app/utils/: text.py
tests/: README.md  conftest.py  test_database.py  test_nlp.py  test_youtube_business_service.py
